src/test/ui/try-trait/try-control-flow-in-result.stderr
error[E0277]: the `?` operator can only be used in a function that returns `Result` or `Option` (or another type that implements `FromResidual`)
  --> $DIR/try-control-flow-in-result.rs:11:5
   |
LL | / fn demo() -> Result<(), ()> {
LL | |     returns_control_flow()?;
   | |     ^^^^^^^^^^^^^^^^^^^^^^^ cannot use the `?` operator in a function that returns `std::result::Result<(), ()>`
LL | |     Ok(())
LL | | }
   | |_- this function should return `Result` or `Option` to accept `?`
   |
   = help: the trait `FromResidual<ControlFlow<(), !>>` is not implemented for `std::result::Result<(), ()>`
   = note: required by `from_residual`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
